# artifacts/api-server/src/routes/challenges.ts
@@ -25,6 +25,9 @@ router.get("/challenges", async (req, res) => {
       title: challengesTable.title,
       description: challengesTable.description,
       subject: challengesTable.subject,
+      courseCode: challengesTable.courseCode,
+      lecturerName: challengesTable.lecturerName,
+      topic: challengesTable.topic,
       difficulty: challengesTable.difficulty,
       authorName: challengesTable.authorName,
       createdAt: challengesTable.createdAt,
@@ -105,6 +108,9 @@ router.get("/challenges/recent/activity", async (req, res) => {
       challengeId: sql<number | null>`null`,
       title: challengesTable.title,
       subject: challengesTable.subject,
+      courseCode: challengesTable.courseCode,
+      lecturerName: challengesTable.lecturerName,
+      topic: challengesTable.topic,
       authorName: challengesTable.authorName,
       createdAt: challengesTable.createdAt,
     })
@@ -119,6 +125,9 @@ router.get("/challenges/recent/activity", async (req, res) => {
       challengeId: responsesTable.challengeId,
       title: challengesTable.title,
       subject: challengesTable.subject,
+      courseCode: challengesTable.courseCode,
+      lecturerName: challengesTable.lecturerName,
+      topic: challengesTable.topic,
       authorName: responsesTable.authorName,
       createdAt: responsesTable.createdAt,
     })
@@ -148,6 +157,9 @@ router.get("/challenges/:id", async (req, res) => {
       title: challengesTable.title,
       description: challengesTable.description,
       subject: challengesTable.subject,
+      courseCode: challengesTable.courseCode,
+      lecturerName: challengesTable.lecturerName,
+      topic: challengesTable.topic,
       difficulty: challengesTable.difficulty,
       authorName: challengesTable.authorName,
       createdAt: challengesTable.createdAt,
