# lib/db/src/schema/challenges.ts
@@ -7,6 +7,9 @@ export const challengesTable = pgTable("challenges", {
   title: text("title").notNull(),
   description: text("description").notNull(),
   subject: text("subject").notNull(),
+  courseCode: text("course_code"),
+  lecturerName: text("lecturer_name"),
+  topic: text("topic"),
   difficulty: text("difficulty").notNull(),
   authorName: text("author_name").notNull(),
   createdAt: timestamp("created_at").defaultNow().notNull(),
